feat: allow PATCH endpointGroups on v4 HTTP Proxy APIs
Why: callers needed to add, remove, reorder, and edit endpoint groups in
place without falling back to PUT. The field now flows through the same
resolvePatchableList plumbing as flows and is copied back from the
validator-sanitized entity on dry-run, so the preview matches the
persisted-PUT shape.